trunk/Archive2/64/bff6e09203f9f7/output
main.cpp:24:26: error: declaration of 'arr' as array of references
 void JumpIt(int& arr[6][6], int ax, int ay, int bx, int by, int cx, int cy){
                          ^
main.cpp:24:27: error: expected ')' before ',' token
 void JumpIt(int& arr[6][6], int ax, int ay, int bx, int by, int cx, int cy){
                           ^
main.cpp:24:29: error: expected unqualified-id before 'int'
 void JumpIt(int& arr[6][6], int ax, int ay, int bx, int by, int cx, int cy){
                             ^
